<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.administrator.jisuanqi.MainActivity">

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="right|bottom"/>
    <EditText
        android:id="@+id/editText1"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:background="@drawable/white_bg"
        android:inputType="none"
        android:editable="false"
        android:gravity="bottom|end"
        android:hint="@string/zero"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">
        <Button
            android:id="@+id/bt_ce"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:text="@string/clear"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>
        <Button
            android:id="@+id/bt_backspace"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/delete"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>
        <Button
            android:id="@+id/bt_div"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/divide"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>
        <Button
            android:id="@+id/bt_multi"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/multiply"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_7"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:text="@string/seven"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>

        <Button
            android:id="@+id/bt_8"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/eight"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>

        <Button
            android:id="@+id/bt_9"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/night"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>
        <Button
            android:id="@+id/bt_minus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/minus"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/bt_4"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:text="@string/four"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>

        <Button
            android:id="@+id/bt_5"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/five"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>

        <Button
            android:id="@+id/bt_6"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/six"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>
        <Button
            android:id="@+id/bt_plus"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/add"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/white_select_bg"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        style="@android:style/Theme.Black.NoTitleBar">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_1"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="end|bottom"
                    android:text="@string/one"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/white_select_bg"/>
                <Button
                    android:id="@+id/bt_2"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="end|bottom"
                    android:layout_marginLeft="10dp"
                    android:text="@string/two"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/white_select_bg"/>
                <Button
                    android:id="@+id/bt_3"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="end|bottom"
                    android:layout_marginLeft="10dp"
                    android:text="@string/three"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/white_select_bg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_0"
                    android:layout_width="130dp"
                    android:layout_height="60dp"
                    android:gravity="end|bottom"
                    android:text="@string/zero"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/white_select_bg"/>
                <Button
                    android:id="@+id/bt_point"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:gravity="end|bottom"
                    android:layout_marginLeft="10dp"
                    android:text="@string/point"
                    android:textSize="20sp"
                    android:paddingBottom="5dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/white_select_bg"/>

            </LinearLayout>

        </LinearLayout>
        <Button
            android:id="@+id/bt_result"
            android:layout_width="60dp"
            android:layout_height="130dp"
            android:gravity="end|bottom"
            android:layout_marginLeft="10dp"
            android:text="@string/equal"
            android:textSize="20sp"
            android:paddingBottom="5dp"
            android:paddingRight="10dp"
            android:background="@drawable/orange_select_bg"/>
    </LinearLayout>
</LinearLayout>
